# pyeasyencrypt

./: .gitignore  README.md  pyproject.toml  requests.txt
scripts/: compile_and_upload.sh  compile_only.sh  upload_pypi.sh
src/pyeasyencrypt/: pyeasyencrypt.py
tests/pyeasyencrypt/: test_pyeasyencrypt.py
