
# Generated using pyarchetype template
# pip install pyarchetype
# git clone https://github.com/redcorjo/pyarchetype.git
[project]
name = "pyeasyencrypt"
version = "0.1.0"
description = "Your easy tool to encrypt and decrypt strings with a password"
authors = [
  { name="Jordi Redondo", email="jordipromotions@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
"cryptography"
]

[project.urls]
"Homepage" = "https://github.com/user/pyeasyencrypt"
"Bug Tracker" = "https://github.com/user/pyeasyencrypt/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#[project.scripts]
#pyarchetype = "pyeasyencrypt.pyeasyencrypt:main"